--- a/GameBaseDx11.vcxproj
+++ b/GameBaseDx11.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="Engine\Transform.cpp" />
     <ClCompile Include="Gauge.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Ready.cpp" />
     <ClCompile Include="TestScene.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -188,6 +189,7 @@
     <ClInclude Include="Engine\Transform.h" />
     <ClInclude Include="Gauge.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Ready.h" />
     <ClInclude Include="TestScene.h" />
   </ItemGroup>
   <ItemGroup>
